# fips205-authenticator

./: .gitignore  CLAUDE.md  LICENSE  Move.toml  README.md  create_account.sh  deploy.sh  transfer_128f.sh  transfer_128s.sh
cli/: Cargo.toml
cli/src/: main.rs
sources/: fips205_authenticator.move
